<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/login_photo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/signup_page" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_image"
                android:hint="Type Your Email Here..."
                android:inputType="textEmailAddress"
                android:cursorVisible="true"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="textStart"
                android:filterTouchesWhenObscured="true"
                android:textCursorDrawable="@color/colorPrimary"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/email"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:autofillHints="abc@gmail.com" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="Password..."
                android:cursorVisible="true"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp" />

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_password"
                android:text="@string/forget_password"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="15dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_link"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"/>
            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_button"
                android:text="@string/need_new_account"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/or_login_using_your"
                android:layout_below="@+id/need_new_account_link"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_using"
                android:padding="4dp"
                android:layout_marginRight="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:text="@string/phone"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/phone"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>